Fix long nicknames breaking the board layout on mobile

--- a/board/static/css/board.scss
+++ b/board/static/css/board.scss
@@ -154,7 +154,7 @@
 				}
 				&.author { margin-left:4%; }
 				&.author .icon { display:none; }
-				&.author .text { max-width:none; }
+				&.author .text { max-width:8em; }
 				&.views { margin:0; }
 			}
 			&.announcement .cell.category { background:rgba(0,0,0,.1); }
